--- a/index.html
+++ b/index.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Resume</title>
+	<title>My Resume Example</title>
 	<link rel="stylesheet" href="stylesheet.css" type="text/css">
 </head>
 <body>
+<div class="container">
+	<div class="title">
+		<h1>James T. Kirk</h1>
+		<img src="pic.jpg"/>
+
+		<p>Born "James Tiberius Kirk", I am currently working as the captain of the StarShip Enterprise.</p>
+		<p>123 Main Strett</p>
+		<p>Mytown, Ohio</p>
+		<p>USA</p>
+		<p>515-555-1174</p>
+		<p>captain@enterpries.com</p>
+	</div>
+
+	<div class="details">
+	<h2> Ojbective </h2>
+	I'm currently looking to make a move to a larger ship to undertake missions farther into space than anyone else has gone.
+	<h2> Employment History </h2>
+	<ul>
+		<h3>2416 - Present: Captain of the starship Enterprise</h3>
+		<li>Responsible for life and death decisions</li>
+		<li> Lead all away missions </li>
+		<h3>2414 - 2416: Deloitte and Touche</h3>
+		<li>Prepared financial statements for tax audits</li>
+		<li>Led project team to minimize costs and maximize returns</li>
+	</ul>
+	<h2> Education/Skills </h2>
+	<p>2410 - Completed MBA from Rotman Business School</p>
+	<p>2408 - Graduated from StarFleet Academy with dubious honours </p>
+	<h2> References </h2>
+	<p>Admiral Montague Greer - Starfleet Admiral for Delta Quadrant -<a href="mailto:admiral.greer@starfleet.com">admiral.greer@starfleet.com</a></p>
+	<p>George Cope - President and Chief Executive Officer BCE and Bell Canada - <a href="mailto:george.cope@verizon.com">george.cope@verizon.com</a></p>
+	</div>
+
+</div>
+
+
 
 </body>
 </html>
